<resources>
    <string name="app_name">English</string>
    <string name="logInButton">Войти</string>
    <string name="singUpButton">Регистрация</string>
    <string name="fieldPassword">Пароль</string>
    <string name="fieldEmail">Email</string>
    <string name="forgetPasswordTextView">Забыли ваш пароль?</string>
    <string name="orLogInTextView">Или войти с помощью</string>

    <string name="loginIsNull">Введите ваш логин!</string>
    <string name="passwordIsNull">Введите ваш пароль!</string>
    <string name="nameIsNull">Введите ваше имя!</string>
    <string name="passwordLessSix">Длина меньше 6 символов!</string>
    <string name="loginIsNotValid">Не верный E-mail!</string>
    <string name="loading">Загрузка&#8230; Пожалуйста подождите.</string>
    <string name="close">Закрыть</string>
    <string name="cancel">Отмена</string>
    <string name="alertRegOk">Зарегистрироваться</string>
    <string name="loginPassIncorrect">Упс, неверный пароль или почта. Попробуйте еще раз.</string>
    <string name="loginPassIncorrectTitle">Ошибка</string>


    <string name="fieldConfPassword">Подтвердите пароль</string>
    <string name="alertRegTitle">Новый</string>
    <string name="switchRules">С правилами согласен</string>
    <string name="passDontEquals">Пароль не совпадает</string>
    <string name="rulesErr">Согласитесь с правилами</string>
    <string name="forgotPassTitle">Восстановление пароля</string>
    <string name="forgotPassButt">Восстановить</string>
    <string name="forgotPassMessage">На вашу почту отправлено письмо для восстановления.</string>
    <string name="googleConnectionFailed">Ошибка сервисов Гугл.</string>


    <string name="menu_down_user">Вы</string>
    <string name="menu_down_grammar">Грамматика</string>
    <string name="menu_down_training">Тренеровки</string>
    <string name="menu_down_dictionary">Словарь</string>
    <string name="menu_down_moments">Моменты</string>

    <string name="profile">Профиль</string>

    <string name="message">Сообщение&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_logout">Выйти из аккаунта</string>

    <string name="permission_denied">Доступ запрещен</string>
    <string name="title_setup">Настройки профиля</string>
    <string name="textedit_name_hint">Ваше имя...</string>
    <string name="error">Ошибка: </string>

    <string name="alert_dialog_logout_close">Отмена</string>
    <string name="alert_dialog_logout_exit">Выйти</string>
    <string name="alert_dialog_logout_msg">Вы уверены что хотите выйти?</string>
    <string name="connection_bad">Нет соединения с интернетом</string>
    <string name="toolbar_blog">Общение</string>
    <string name="toolbar_new_post">Новый момент</string>
    <string name="editText_NewPost_hint">Добавьте ваше сообщение...</string>
    <string name="btn_addNewPost">Опубликовать</string>
    <string name="new_post_successful">Сообщение было добавлено</string>
    <string name="new_user_name">Имя пользователя</string>

    <string name="error_share">Ошибка при попытке поделиться.</string>
    <string name="share_blog_post">Поделиться событием</string>
    <string name="comments_title">Подробно</string>

    <string name="error_post_comment">Ошибка при отправке комментария, </string>

    <string name="popup_blog_report">Пожаловаться</string>
    <string name="popup_blog_delete">Удалить</string>
    <string name="popup_blog_report_msg">Вы уже отправили жалобу</string>


    <string name="one_minute_ago">меньше минуты назад</string>
    <string name="n_minute_ago">минут назад</string>
    <string name="one_hour_ago">Один час назад</string>
    <string name="today_at">сегодня в</string>
    <string name="yesterday_at">вчера в</string>
    <string name="in">в</string>

    <string name="tv_username">Имя пользователя</string>

    <string name="sending">Добавление...</string>


    <string name="err_moment_text">Вы забыли ввести сообщение ;)</string>


    <string-array name="alertCommentCurrentUser">
        <item>Копировать текст</item>
        <item>Изменить</item>
        <item>Удалить</item>
    </string-array>

    <string-array name="alertCommentAnotherUser">
        <item>Копировать текст</item>
    </string-array>

    <string name="comment_copy">Комментарий скопирован в буфер</string>
    <string name="comment_delete">Комментарий был удалён</string>
    <string name="comment_edit">Редактировать комментарий</string>
    <string name="comment_edit_err">Введите ваш коммментарий</string>

    <string name="userLvl">Уровень</string>
    <string name="userLvlNeed">Осталось</string>
    <string name="userLvlPoints">очков</string>
    <string name="userDayExp">Дневной план</string>
    <string name="myDictionary">Мой словарь</string>
    <string name="vocabularyCount">В вашем словаре %d слов</string>

    <string name="vocabularyCountAgain">%d плохо знаю</string>
    <string name="vocabularyCountGood">%d хорошо знаю</string>
    <string name="vocabularyCountEasy">%d легко знаю</string>
    <string name="vocabularyCountHard">%d отлично знаю</string>


    <string name="vocabularyActivityTitle">Мой словарь</string>
    <string name="titleWordSet">Наборы слов</string>

    <string name="addNewWordsTitle">Добавить новое слово</string>
    <string name="addNewWordsSearch">Введите английское слово</string>

    <string name="wordNotFound">Это слово не найдено в словаре</string>
    <string name="otherWords">Другие варианты перевода</string>
    <string name="speechErr">Установите в настройках телефона синтезатор речи!</string>
    <string name="searchRU">Найти русское слово... </string>

    <string name="grammaAreIsAm">am/is/are </string>
    <string name="nextSent"><![CDATA[Следуещее >]]></string>
    <string name="rezult_grammar">Результат</string>
    <string name="rezult_grammar_exp">Вы заработали %d опыта.</string>
    <string name="add_train">Составить тренировку</string>
    <string name="wordTrnsl">Слово-перевод</string>
    <string name="translWord">Перевод-слово</string>

    <string name="again">Плохо знаю</string>
    <string name="good">Хорошо знаю</string>
    <string name="easy">Легко знаю</string>
    <string name="hard">Отлично знаю</string>
    <string name="notWords">Нет новых слов</string>


</resources>
