<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleForgotPassTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSingInButton"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:text="@string/forgotPassTitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/restoreEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="4dp"
        android:hint="@string/fieldEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/restoreEmailErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/loginIsNull"
        android:textColor="@color/colorScarlet"
        android:textSize="8sp"
        android:visibility="invisible" />


</LinearLayout>
