<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="aksenchyk.englishgrow.LoginActivity">

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="140dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="9dp"
        android:ems="10"
        android:hint="@string/fieldEmail"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/colorSingInButton"
        android:textColorHint="@color/colorSingUnButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="9dp"
        android:ems="10"
        android:hint="@string/fieldPassword"
        android:inputType="textPassword"
        android:shadowColor="@color/colorSingInButton"
        android:textColorHint="@color/colorSingUnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditText" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorSingInButton"
        android:text="@string/logInButton"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/singUpButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/singUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorSingUnButton"
        android:text="@string/singUpButton"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/logInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgetPasswordTextView"
        android:textColor="@color/colorLoginElements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpButton" />

    <View
        android:id="@+id/lineLeftView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorLoginElements"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/orLogInTextView"
        app:layout_constraintEnd_toStartOf="@+id/orLogInTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orLogInTextView" />

    <TextView
        android:id="@+id/orLogInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/orLogInTextView"
        android:textColor="@color/colorLoginElements"
        app:layout_constraintEnd_toStartOf="@+id/lineRightView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lineLeftView"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordTextView" />

    <View
        android:id="@+id/lineRightView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="2dp"
        android:background="@color/colorLoginElements"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/orLogInTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/orLogInTextView"
        app:layout_constraintTop_toTopOf="@+id/orLogInTextView" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:buttonSize="wide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orLogInTextView" />

    <TextView
        android:id="@+id/loginErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/loginIsNull"
        android:textColor="@color/colorScarlet"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginEditText" />

    <TextView
        android:id="@+id/passwordErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/passwordIsNull"
        android:textColor="@color/colorScarlet"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />


</android.support.constraint.ConstraintLayout>
